# pkg/routes/private_routes.go
@@ -12,13 +12,8 @@ func PrivateRoutes(a *fiber.App) {
 	route := a.Group("/api/v1")
 
 	// Routes for POST method:
-	route.Post("/book", middleware.JWTProtected(), controllers.CreateBook)           // create a new book
 	route.Post("/user/sign/out", middleware.JWTProtected(), controllers.UserSignOut) // de-authorization user
 	route.Post("/token/renew", middleware.JWTProtected(), controllers.RenewTokens)   // renew Access & Refresh tokens
 
-	// Routes for PUT method:
-	route.Put("/book", middleware.JWTProtected(), controllers.UpdateBook) // update one book by ID
-
-	// Routes for DELETE method:
-	route.Delete("/book", middleware.JWTProtected(), controllers.DeleteBook) // delete one book by ID
+	route.Get("/roles", middleware.JWTProtected(), controllers.GetRoles) // get roles
 }
